kubernetes/overlays/dev/patch-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx
  namespace: ns-flask-app
  labels:
    app: app-nginx
spec:
  replicas: 1
